EKS-k8s-code/cicd-devops-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-project
spec:
  selector:
    matchLabels:
      app: eks-project
  replicas: 2

  template:
    metadata:
      labels:
        app: eks-project
    spec:
      containers:
      - name: eks-project
        image: jch941022/eks-project
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
